# pw_homework_module_10_django

./: README.md  docker-compose.yaml  pyproject.toml
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: models.py  urls.py  utils.py  views.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py
